--- a/registration.html
+++ b/registration.html
@@ -86,7 +86,7 @@
                             <div class="kash-form">
                                 <div class="flea-k-from">
                                     <input type="password" required="" class="form-cont" id="password" placeholder="Enter your password">
-                                    <br><span class="valid-fm1" class="usrpswvalid"></span>
+                                    <br><span class="valid-fm1" id="usrpswvalid"></span>
                                 </div>
                             </div>
                         </div>
