--- a/submition.html
+++ b/submition.html
@@ -12,7 +12,7 @@
             <p>Your details have been submitted successfully</p>
         </div>
         <div class="login-drctn7">
-            <div class="login-lnk7"><a href="login.html">login</a></div>
+            <div class="login-lnk7"><a href="activate.html">Next</a></div>
         </div>
     </div>
 </body>
