--- a/login.html
+++ b/login.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
     <title>login to FleaKash</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="./css/login.css">
