--- a/registration.html
+++ b/registration.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8">i
+    <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
     <title>FleaKash new accommodation registration</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="./css/register.css">
