--- a/activate.html
+++ b/activate.html
@@ -5,8 +5,7 @@
     <title>Kenyan Activation of account</title>
     <!-- <link rel="stylesheet" href="./css/activa.css"> -->
     <link rel="stylesheet" href="./css/activate.css" media="screen">
-    <link rel="stylesheet" href="./css/activate-mobile.css" media="screen and (max-width: 768px)">
-
+<meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
 </head>
 <body>
    <section id="activation-section">
@@ -21,8 +20,7 @@
                            <li>Select Lipa na Mpesa  </li>
                            <li>Buy Goods and services</li>
                            <li>Enter Buy Goods till number 12345</li>
-                           <li>Enter Mpesa pin  </li>
-                           <li>Enter Amount 240</li>
+                           <li>Enter Mpesa pin  </li>                           <li>Enter Amount 240</li>
                            <li>Confirm payment</li>
                        </ol>
                    </div>
