--- a/registration.html
+++ b/registration.html
@@ -46,7 +46,7 @@
                         <div class="form-group">
                             <div class="kash-form">
                                 <div class="flea-k-form">
-                                    <input type="text" placeholder="Enter your email address" id="email" class="form-count" value="" required="" outocompletely>
+                                    <input type="email" placeholder="Enter your email address" id="email" class="form-count" value="" required="" outocompletely>
                                     <br><span class="valid-fm1" id="usremailvalid"></span>
                                 </div>
                             </div>
