--- a/submition.html
+++ b/submition.html
@@ -4,18 +4,28 @@
     <meta charset="UTF-8">
     <title>FleaKash=details submitted successfully</title>
     <link rel="stylesheet" href="./css/submission.css">
+    <link rel="stylesheet" href="./css/success.css">
 </head>
 <body>
-    <div>
-        <div class="logo-fleakash"><h1>FleaKash</h1></div>
-        <div class="submition-rm7">
-            <p>Your details have been submitted successfully</p>
-        </div>
-        <div class="login-drctn7">
-            <div class="login-lnk7"><a href="activate.html">Next</a></div>
+    <div id="loading-screen">
+      <div class="loader"></div>
+    </div>
+    <div class="pop-up" id="popup">
+        <div class="pop-content7">
+            <span class="success-icon"></span>
+            <div class="logo-fleakash"><h1>FleaKash</h1></div>
+                <div class="submition-rm7">
+                   <p>Your details have been submitted successfully. Thanks! </p>
+                   <p>press the button bellow to continue</p>
+                 </div>
+            <div class="login-drctn7">
+                <div class="login-lnk7"><a href="activate.html">Next</a></div>
+             </div>
         </div>
     </div>
+    <script type="text/javascript" src="./js/popout.js"></script>
+    <script type="text/javascript" src="./js/success.js"></script>
+    <script type="text/javascript" src="./js/submission.js"></script>
 </body>
 </html>
-
 
