--- a/activate.html
+++ b/activate.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport"content="width=device-width, initial-scale=1" >
     <title>Kenyan Activation of account</title>
     <!-- <link rel="stylesheet" href="./css/activa.css"> -->
     <link rel="stylesheet" href="./css/activate.css" media="screen">
-<meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
+    <!--<meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport"> -->
 </head>
 <body>
    <section id="activation-section">
