--- a/submition.html
+++ b/submition.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport"content="width=device-width, initial-scale=1" >
     <title>FleaKash=details submitted successfully</title>
     <link rel="stylesheet" href="./css/submission.css">
     <link rel="stylesheet" href="./css/success.css">
