--- a/registration.html
+++ b/registration.html
@@ -6,7 +6,8 @@
     <title>FleaKash new accommodation registration</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="./css/register.css">
-    
+    <!-- icons-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
     <section class="new-account-reg">
